# energy-data-project

./: README.md  bootstrap_project.py
.github/workflows/: ci.yml  (+1 more)
energy_data_project/: .env.example  .gitignore  README.md  pyproject.toml
energy_data_project/app/: dashboard.py
energy_data_project/configs/: datasets.yml
energy_data_project/data/audit/: indicadores_aneel_metadata.json
energy_data_project/dbt/: dbt_project.yml  profiles.yml
energy_data_project/dbt/models/gold/: gold_indicadores.sql  schema.yml
energy_data_project/docs/: CLAUDE.md  arquitetura.md  changes.md  roadmap.md
energy_data_project/src/energy_data/: cli.py
energy_data_project/src/energy_data/bronze/: contracts.py
energy_data_project/src/energy_data/core/: config.py  exceptions.py  logging.py  utils.py
energy_data_project/src/energy_data/gold/: processor.py  validators.py
energy_data_project/src/energy_data/ingestion/: models.py  orchestrator.py
energy_data_project/src/energy_data/ingestion/audit/: metadata.py
energy_data_project/src/energy_data/silver/: processor.py  transformations.py  validators.py  writer.py
energy_data_project/src/energy_data_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
energy_data_project/src/lakehouse/: cli.py
energy_data_project/src/lakehouse/bronze/: processor.py
energy_data_project/src/lakehouse/core/: config.py  exceptions.py  logging.py  spark.py  utils.py
energy_data_project/src/lakehouse/gold/: processor.py
energy_data_project/src/lakehouse/ingestion/: models.py  orchestrator.py
energy_data_project/src/lakehouse/silver/: processor.py  transformations.py
energy_data_project/tests/gold/: test_gold_processor.py  test_gold_validators.py
energy_data_project/tests/unit/: test_bronze_transformations.py  test_config.py  test_silver_transformations.py
(+14 files in other folders)
