[project]
name = "energy-data-project"
version = "0.2.0"
description = "Pipeline de ingestão de dados ANEEL para projeto de engenharia de dados"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.8.2",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[project.scripts]
energy-data = "energy_data.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]