[project]
name = "modern-energy-lakehouse"
version = "0.3.0"
description = "Modern Energy Lakehouse — pipeline de dados ANEEL com PySpark, Delta Lake, DBT e DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyspark>=3.5.0",
  "delta-spark>=3.2.0",
  "duckdb>=1.0.0",
  "dbt-core>=1.8.0",
  "dbt-duckdb>=1.8.0",
  "streamlit>=1.38.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[project.scripts]
lakehouse = "lakehouse.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
